WIP: fixing things for python3

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,19 +6,30 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;env_default = uno
-;env_default = esp01
-;env_default = esp32dev
-;env_default = uno, esp01, esp32dev
 src_dir = examples/JTAGTest
-lib_dir=..
+lib_dir = ..
+
+[env]
+monitor_speed = 115200
 
 [env:uno]
 platform = atmelavr
 board = uno
+framework = arduino
+build_flags = ${common.build_flags}
+
+[env:nano]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+build_flags = ${common.build_flags}
+
+[env:mega]
+platform = atmelavr
+board = megaatmega1280
 framework = arduino
 build_flags = ${common.build_flags}
 
